syntax="proto3";

package products;

service ProductService{
    rpc List(ListRequest) returns (ListResponse){}
    rpc Get(GetRequest) returns (ProductDetail){}
}


message Price {
    string symbol = 1;
    string currency = 2;
    string amount = 3;
}
message Product{
    string id = 1;
	string name = 2;
	bool discount = 3;
	string imageURL = 4;
    Price price = 5;
}

message Discount{
    string discountID = 1;
    string summary = 2;
}


message ListRequest{}
message ListResponse{
  repeated Product products = 1;
}

message GetRequest{
    string id = 1;
}
message ProductDetail{
	string description = 1;
	Discount discount = 2;
	Product product = 3;
}


